--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
       <div class="top">
         <div class="top__inner">
           <div class="logo">
-            <img src="/images/Group 814.svg" alt="#" class="logo__item" />
+            <img src="//images/logo.svg" alt="#" class="logo__item" />
           </div>
           <div class="top__text">
-            <h4 class="text__one">Web3 Cloud</h4>
-            <h6 class="top__two">by primelab</h6>
+            <h4 class="top__heading">Web3 Cloud</h4>
+            <h6 class="top__heading-two">by primelab</h6>
           </div>
         </div>
       </div>
-      <div class="down"></div>
+      <div class="down">
       <section class="main">
         <div class="block1">
           <div class="block1__header">
