--- a/index.html
+++ b/index.html
@@ -17,60 +17,62 @@
     <div class="container">
       <div class="top">
         <div class="top__inner">
-          <div class="logo">
-            <img src="//images/logo.svg" alt="#" class="logo__item" />
-          </div>
-          <div class="top__text">
-            <h4 class="top__heading">Web3 Cloud</h4>
-            <h6 class="top__heading-two">by primelab</h6>
-          </div>
+          <img src="//images/logo.svg" alt="#" class="logo__item" />
+          <h4 class="top__heading">Web3 Cloud</h4>
+          <h6 class="top__heading-two">by primelab</h6>
         </div>
+        <img src="/images/Designleft.svg" alt="" class="top__designleft" />
+        <img src="/images/Designright.svg" alt="" class="top__designright" />
       </div>
       <div class="down">
-      <section class="main">
-        <div class="block1">
-          <div class="block1__header">
-            <h2 class="block1__heading">Create an Account</h2>
-            <p class="block1__par">
-              Store, edit and share your files using the power of the blockchain
-              for free.
-            </p>
+        <section class="main">
+          <div class="block1">
+            <div class="block1__header">
+              <h2 class="block1__heading">Create an Account</h2>
+              <p class="block1__par">
+                Store, edit and share your files using the power of the
+                blockchain for free.
+              </p>
+            </div>
+            <div class="block1__reg">
+              <button class="block1__email" type="reset">Email</button>
+              <button class="block1__phone" type="reset">Phone</button>
+            </div>
+            <div class="block1__input">
+              <input type="tel" class="block1__input-code" placeholder="+1" />
+              <input
+                type="tel"
+                class="block1__input-phone"
+                placeholder="Ex. 3373788383"
+              />
+            </div>
+            <div class="cont">
+              <button class="cont__button" type="submit">Continue</button>
+              <p class="cont__text">
+                by clicking continue you must agree to Primelabs
+                <a href="" class="cont__link">Terms & Conditions</a> and
+                <a href="" class="cont__link">Privacy Policy</a>
+              </p>
+            </div>
+            <hr class="cont__text-line" />
           </div>
-          <div class="block1__reg">
-            <button class="block1__email" type="reset">email</button>
-            <button class="block1__phone" type="reset">phone</button>
+          <div class="block2">
+            <div class="block2__header">
+              <h2 class="block2__heading">Sign In</h2>
+              <p class="block2__par">
+                Sign in with an existing primelab account
+              </p>
+            </div>
+            <div class="block2__signin">
+              <span class="block2__accountid">Account ID</span>
+              <input type="text" class="block2__input1" placeholder="johnd" />
+              <input type="text" class="block2__input2" placeholder=".near" />
+            </div>
+            <button class="sign__button" type="submit">Sign in</button>
           </div>
-          <div class="block1__unput">
-            <input type="tel" class="block1__input-code" placeholder="+1" />
-            <input
-              type="tel"
-              class="block1__input-phone"
-              placeholder="Ex. 3373788383"
-            />
-          </div>
-          <div class="cont">
-            <button class="cont__button" type="submit">Continue</button>
-            <p class="cont__text">
-              by clicking continue you must agree to Primelabs
-              <a href="" class="cont__link">Terms & Conditions</a> and
-              <a href="" class="cont__link">Privacy Policy</a>
-            </p>
-          </div>
-          <hr />
-        </div>
-        <div class="block2">
-          <div class="block2__header">
-            <h2 class="block1__heading">Sign In</h2>
-            <p class="block1__par">Sign in with an existing primelab account</p>
-          </div>
-          <div class="block2__signin">
-            <span class="block2__accountid">Account ID</span>
-            <input type="text" class="block2__input1" placeholder="johnd" />
-            <input type="text" class="block2__input2" placeholder=".near" />
-          </div>
-          <button class="sign__button" type="submit">Sign in</button>
-        </div>
-      </section>
+        </section>
+      </div>
+      >
     </div>
   </body>
 </html>
