--- a/index.html
+++ b/index.html
@@ -17,12 +17,24 @@
     <div class="container">
       <div class="top">
         <div class="top__inner">
-          <img src="//images/logo.svg" alt="#" class="logo__item" />
+          <img
+            src="C:\Users\Мария Синякова\Desktop\Web3Cloud\images\logo.svg"
+            alt="#"
+            class="logo__item"
+          />
           <h4 class="top__heading">Web3 Cloud</h4>
           <h6 class="top__heading-two">by primelab</h6>
         </div>
-        <img src="/images/Designleft.svg" alt="" class="top__designleft" />
-        <img src="/images/Designright.svg" alt="" class="top__designright" />
+        <img
+          src="C:\Users\Мария Синякова\Desktop\Web3Cloud\images\Designleft.svg"
+          alt=""
+          class="top__design-left"
+        />
+        <img
+          src="C:\Users\Мария Синякова\Desktop\Web3Cloud\images\Designright.svg"
+          alt=""
+          class="top__design-right"
+        />
       </div>
       <div class="down">
         <section class="main">
@@ -72,7 +84,6 @@
           </div>
         </section>
       </div>
-      >
     </div>
   </body>
 </html>
