--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
           <h6 class="top__heading-two">by primelab</h6>
         </div>
         <img
-          src="C:\Users\Мария Синякова\Desktop\Web3Cloud\images\Designleft.svg"
+          src="https://github.com/NikolayBV/Web3Cloud/blob/master/images/Designleft.svg"
           alt=""
           class="top__design-left"
         />
         <img
-          src="C:\Users\Мария Синякова\Desktop\Web3Cloud\images\Designright.svg"
+          src="https://github.com/NikolayBV/Web3Cloud/blob/master/images/Designright.svg"
           alt=""
           class="top__design-right"
         />
